# modern

./: .gitignore  README.md  pyproject.toml  setup.py
assets/: modern.ai
example/: downloader.py
nercone_modern/: ModernProgressBar.py  __main__.py
src/modern/: __init__.py  __main__.py  color.py  logging.py  progressbar.py  terminal.py  text.py
src/modern/logger/: __init__.py  main.py  parts.py
src/modern/progressbar/: __init__.py  main.py  parts.py
src/nercone_modern/: __init__.py  __main__.py  color.py  logging.py  progressbar.py  text.py
