[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-modern"
version = "1.0.0"
description = "Nercone Modern is a simple package for logging and progress bar and More!"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Nercone", email = "nercone@diamondgotcat.net" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/DiamondGotCat/nercone-modern"

[tool.setuptools.packages.find]
where = ["."]
