[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-modern"
version = "5.1.2"
description = "Modern CLI Library"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "strip-ansi"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
GitHub = "https://github.com/nercone-dev/modern/"

[tool.uv.build-backend]
module-name = "modern"
